@@ -1,5 +1,10 @@
 # testfenil.github.io
 
+// Make a eassy way to make a bundle
+
+            org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+
 // Ffmpeg Demo & Image to background ML Kit
             
             //ML KIT
